<resources>
    <string name="app_name" translatable="false">MusicForBooks</string>
    <string name="title_activity_main" translatable="false">MusicForBooks</string>
    <string name="action_settings">Settings</string>

    <string name="search_hint">Search for books, authors or bands</string>
    <string name="song_search_hint">Search for a band or a song</string>
    <string name="feed_description">Recommendations</string>
    <string name="book_placeholder_title">Book</string>
    <string name="book_placeholder_author">Author</string>

    <string name="search_by_book">By book/author</string>
    <string name="search_by_song">By song/band</string>

    <string name="error_loading">There was an error loading the content. Try again later</string>
    <string name="search_no_results">No results. Try with another query</string>

    <string name="book_only_instrumental">Only instrumental</string>
    <string name="book_sort_by">Sort by</string>

    <string-array name="book_available_sorts">
        <item>title</item>
        <item>band</item>
        <item>score</item>
    </string-array>

    <string name="book_see_on_goodreads">Open on GoodReads</string>

    <string name="song_number_placeholder" translatable="false">1</string>
    <string name="song_name_placeholder" translatable="false">God\'s Teeth</string>
    <string name="song_artist_name_placeholder" translatable="false">This Will Destroy You</string>
    <string name="song_no_results">Seems like we don\'t have any songs for this book yet. Add your own!</string>
    <string name="song_search_no_results">No results. Try with a different query!</string>
    <string name="song_search_start">Don\'t be shy, search for something!</string>
    <string name="song_add">Add new song</string>
    <string name="song_add_confirmation_title">Add song</string>
    <string name="song_add_confirmation_message">Are you sure you want to add %1$s to this book?</string>
</resources>
